--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,9 @@ html,body{
 body{
   display: grid;
   grid-template-rows: 95% 5%;
+  position: relative;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
 }
 :root{
   /*Primary color*/
@@ -13,6 +16,125 @@ body{
   --primary-bright-red: hsl(356, 69%, 56%);
   --primary-facebook: hsl(208, 92%, 53%);
   --primary-twitter: hsl(203, 89%, 53%);
-  --primary-instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+  --primary-instagram: linear-gradient(90deg, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
   --primary-youTube: hsl(348, 97%, 39%);
+
+  /*Dark theme*/
+  --main-toggle-dark: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+  --very-dark-blue-bg: hsl(230, 17%, 14%);
+  --very-dark-blue-top-bg: hsl(232, 19%, 15%);
+  --dark-desaturated-blue: hsl(228, 28%, 20%);
+  --desaturated-blue: hsl(228, 34%, 66%);
+  --white-text: hsl(0, 0%, 100%);
+
+  /*light theme*/
+  --main-toggle: hsl(230, 22%, 74%);
+  --white-bg: hsl(0, 0%, 100%);
+  --very-pale-blue: hsl(225, 100%, 98%);
+  --light-grayish-blue: hsl(227, 47%, 96%);
+  --dark-grayish-blue: hsl(228, 12%, 44%);
+  --very-dark-blue: hsl(230, 17%, 14%);
+}
+
+/*mobile first*/
+.bg{
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#main{
+  width: 88%;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 25px;
+}
+
+/**** Dark theme ****/
+/*Background*/
+.bg-dark .bg-top{
+  width: 100%;
+  height: 180px;
+  background-color: var(--very-dark-blue-top-bg);
+}
+.bg-dark .bg-bottom{
+  width: 100%;
+  height: 75%;
+  background-color: var(--very-dark-blue-bg);
+}
+
+/*** DASHBOARD***/
+/*Header*/
+.dark #dashboard {
+  display: grid;
+  grid-template-rows: 170px 1fr;
+  grid-gap: 15px;
+}
+.dark #dashboard .header{
+  display: grid;
+  grid-template-rows: 65% 35%;
+}
+.dark #dashboard .header .title{
+  position: relative;
+}
+.dark #dashboard .header .title h1{
+  color: var(--white-text);
+  font-size: 1.7em;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.dark #dashboard .header .title span,
+.dark .dark-mode span{
+  color: var(--desaturated-blue);
+  font-weight: 700;
+}
+.dark #dashboard .header .hr{
+  border-bottom: 1px solid var(--desaturated-blue);
+  margin-top: 20px;
+  position: absolute;
+  bottom:0;
+  width: 100%;
+}
+.dark .dark-mode{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 20px;
+  position: relative;
+}
+.dark .dark-mode .switch-container{
+  position: absolute;
+  right: 0;
+  top: 20px;
+}
+.dark .dark-mode .switch{
+  background: var(--main-toggle-dark);
+  width: 50px;
+  height: 25px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.dark .dark-mode .switch::after{
+  content: "";
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  background-color: var(--dark-desaturated-blue);
+  border-radius: 100%;
+  position: absolute;
+  left: 4px;
+}
+/*Body*/
+
+
+
+
+
+
+footer{
+  font-size: 11px;
+  text-align: center;
 }
