--- a/static/styles.css
+++ b/static/styles.css
@@ -3,8 +3,6 @@ html,body{
   padding: 0;
 }
 body{
-  display: grid;
-  grid-template-rows: 95% 5%;
   position: relative;
   font-family: 'Inter', sans-serif;
   font-size: 14px;
@@ -51,16 +49,50 @@ body{
 
 /**** Dark theme ****/
 /*Background*/
+
 .bg-dark .bg-top{
   width: 100%;
-  height: 25%;
+  height: 10%;
   min-height: 180px;
   background-color: var(--very-dark-blue-top-bg);
 }
 .bg-dark .bg-bottom{
   width: 100%;
-  height: 75%;
+  height: 90%;
   background-color: var(--very-dark-blue-bg);
+}
+
+/*shared classes*/
+.dark .title-section{
+  color: var(--white-text);
+  font-size: 1.7em;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+span.up-subs{
+  color: var(--primary-lime-green);
+  position: relative;
+}
+span.down-subs{
+  color: var(--primary-bright-red);
+  position: relative;
+}
+span.up-subs::before,
+span.down-subs::before{
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  position: absolute;
+  left: -15px;
+  top: 6px;
+}
+span.down-subs::before{
+  border-top: 5px solid var(--primary-bright-red);
+}
+span.up-subs::before{
+  border-bottom: 5px solid var(--primary-lime-green);
 }
 
 /***** DASHBOARD *****/
@@ -76,12 +108,6 @@ body{
 }
 .dark #dashboard .header .title{
   position: relative;
-}
-.dark #dashboard .header .title h1{
-  color: var(--white-text);
-  font-size: 1.7em;
-  margin-top: 30px;
-  margin-bottom: 10px;
 }
 .dark #dashboard .header .title span,
 .dark .dark-mode span{
@@ -193,19 +219,42 @@ body{
   margin-top: 30px;
   color: var(--white-text);
 }
-span.up-subs{
-  color: var(--primary-lime-green);
+
+/***** Overview *****/
+.dark #overview {
+  display: grid;
+  grid-gap: 10px;
 }
-span.down-subs{
-  color: var(--primary-bright-red);
+.dark #overview .overview-body{
+  display: grid;
+  grid-gap: 20px;
 }
-
-
-
-
-
+.dark #overview .overview-body .card-overview{
+  background-color: var(--dark-desaturated-blue);
+  border-radius: 5px;
+  padding: 22px 28px;
+  display: grid;
+  grid-gap: 25px;
+}
+.dark #overview .overview-body .card-overview .card-header,
+.dark #overview .overview-body .card-overview .card-body{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.dark #overview .overview-body .card-overview .card-header h4{
+  color: var(--desaturated-blue);
+  font-size: 15px;
+  margin: 0;
+}
+.dark #overview .overview-body .card-overview .card-body > span:not(.percentage) {
+  color: var(--white-text);
+  font-size: 35px;
+  font-weight: 700;
+}
 
 footer{
+  padding: 25px 0;
   font-size: 11px;
   text-align: center;
 }
