--- a/static/styles.css
+++ b/static/styles.css
@@ -258,3 +258,28 @@ footer{
   font-size: 11px;
   text-align: center;
 }
+
+/*** RESPONSIVE ***/
+@media only screen and (min-height: 1000px){
+  html,body{
+    height: 100%;
+  }
+}
+@media only screen and (min-width: 550px){
+  #dashboard .body,
+  #overview .overview-body{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (min-width: 970px){
+  #dashboard .body,
+  #overview .overview-body{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media only screen and (min-width: 1200px){
+  #dashboard .body,
+  #overview .overview-body{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
