--- a/static/styles.css
+++ b/static/styles.css
@@ -46,29 +46,188 @@ body{
   width: 88%;
   margin: 0 auto;
 }
+footer{
+  padding: 25px 0;
+  font-size: 11px;
+  text-align: center;
+}
 
-/**** Dark theme ****/
-/*Background*/
-
-.bg-dark .bg-top{
+/************* layout **************/
+/*** Bacground ***/
+.bg .bg-top{
   width: 100%;
   height: 10%;
   min-height: 180px;
-  background-color: var(--very-dark-blue-top-bg);
+  background-color: var(--very-pale-blue);
 }
-.bg-dark .bg-bottom{
+.bg .bg-bottom{
   width: 100%;
   height: 90%;
-  background-color: var(--very-dark-blue-bg);
+  background-color: var(--white-bg);
+}
+/*** Dashboard ***/
+#dashboard {
+  display: grid;
+  grid-template-rows: 170px 1fr;
+  grid-gap: 15px;
+}
+#dashboard .header{
+  display: grid;
+  grid-template-rows: 65% 35%;
+}
+#dashboard .header .title{
+  position: relative;
+}
+#dashboard .header .title span,
+.dark-mode span{
+  color: var(--dark-grayish-blue);
+  font-weight: 700;
+}
+#dashboard .header .hr{
+  border-bottom: 1px solid var(--dark-grayish-blue);
+  margin-top: 20px;
+  position: absolute;
+  bottom:0;
+  width: 100%;
+}
+#dashboard .dark-mode{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 20px;
+  position: relative;
+}
+#dashboard .dark-mode .switch-container{
+  position: absolute;
+  right: 0;
+  top: 20px;
+} 
+#dashboard .dark-mode .switch{
+  background: var(--main-toggle);
+  width: 50px;
+  height: 25px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+#dashboard .dark-mode .switch::after{
+  content: "";
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  background-color: var(--light-grayish-blue);
+  border-radius: 100%;
+  position: absolute;
+  right: 4px;
+}
+/** Body **/
+#dashboard .body{
+  display: grid;
+  grid-gap: 20px;
+}
+#dashboard .body .card-dashboard{
+  width: 100%;
+  height: 220px;
+  background-color: var(--light-grayish-blue);
+  border-radius: 5px;
+  position: relative;
+}
+#dashboard .body .card-dashboard::after{
+  content: "";
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  top:0;
+  left: 0;
+  border-radius: 5px 5px 0 0;
+}
+#dashboard .body .b-fc::after{
+  background-color: var(--primary-facebook);
+}
+#dashboard .body .b-tw::after{
+  background-color: var(--primary-twitter);
+}
+#dashboard .body .b-ig::after{ 
+  background: var(--primary-instagram);
+}
+#dashboard .body .b-yt::after{
+  background-color: var(--primary-youTube);
+}
+#dashboard .body .card-dashboard .card-header {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#dashboard .body .card-dashboard .card-header img{
+  margin-right: 8px;
+}
+#dashboard .body .card-dashboard .card-header span{
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--dark-grayish-blue);
+} 
+#dashboard .body .card-dashboard .card-body{
+  margin-top: 20px;
+  text-align: center;
+  font-size: 13px;
+  color: var(--dark-grayish-blue);
+  text-transform: uppercase;
+  letter-spacing: 4.5px;
+}
+#dashboard .body .card-dashboard .card-body h3{
+  color: var(--very-dark-blue);
+  font-size: 50px;
+  margin: 0;
+  letter-spacing: 0;
+}
+#dashboard .body .card-dashboard .card-footer{
+  text-align: center;
+  font-size: 11px;
+  font-weight: 700;
+  margin-top: 30px;
+}
+/*** Overview ***/
+#overview {
+  display: grid;
+  grid-gap: 10px;
+}
+#overview .overview-body{
+  display: grid;
+  grid-gap: 20px;
+}
+#overview .overview-body .card-overview{
+  background-color: var(--light-grayish-blue);
+  border-radius: 5px;
+  padding: 22px 28px;
+  display: grid;
+  grid-gap: 25px;
+}
+#overview .overview-body .card-overview .card-header,
+#overview .overview-body .card-overview .card-body{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#overview .overview-body .card-overview .card-header h4{
+  color: var(--dark-grayish-blue);
+  font-size: 15px;
+  margin: 0;
+}
+#overview .overview-body .card-overview .card-body > span:not(.percentage) {
+  color: var(--very-dark-blue);
+  font-size: 35px;
+  font-weight: 700;
 }
 
-/*shared classes*/
-.dark .title-section{
-  color: var(--white-text);
+/*global shared classes*/
+.title-section{
+  color: var(--very-dark-blue);
   font-size: 1.7em;
   margin-top: 30px;
   margin-bottom: 10px;
 }
+
 span.up-subs{
   color: var(--primary-lime-green);
   position: relative;
@@ -95,170 +254,61 @@ span.up-subs::before{
   border-bottom: 5px solid var(--primary-lime-green);
 }
 
+/**** Dark theme ****/
+/*Background*/
+.dark .bg-top{
+  background-color: var(--very-dark-blue-top-bg);
+}
+.dark .bg-bottom{
+  background-color: var(--very-dark-blue-bg);
+}
+/*shared classes*/
+.dark .title-section{
+  color: var(--white-text);
+}
+
 /***** DASHBOARD *****/
 /*Header*/
-.dark #dashboard {
-  display: grid;
-  grid-template-rows: 170px 1fr;
-  grid-gap: 15px;
-}
-.dark #dashboard .header{
-  display: grid;
-  grid-template-rows: 65% 35%;
-}
-.dark #dashboard .header .title{
-  position: relative;
-}
 .dark #dashboard .header .title span,
 .dark .dark-mode span{
   color: var(--desaturated-blue);
-  font-weight: 700;
 }
 .dark #dashboard .header .hr{
   border-bottom: 1px solid var(--desaturated-blue);
-  margin-top: 20px;
-  position: absolute;
-  bottom:0;
-  width: 100%;
-}
-.dark #dashboard .dark-mode{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding-top: 20px;
-  position: relative;
-}
-.dark #dashboard .dark-mode .switch-container{
-  position: absolute;
-  right: 0;
-  top: 20px;
 }
 .dark #dashboard .dark-mode .switch{
   background: var(--main-toggle-dark);
-  width: 50px;
-  height: 25px;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  position: relative;
 }
 .dark #dashboard .dark-mode .switch::after{
-  content: "";
-  display: inline-block;
-  width: 19px;
-  height: 19px;
   background-color: var(--dark-desaturated-blue);
-  border-radius: 100%;
-  position: absolute;
   left: 4px;
 }
 /*Body*/
-.dark #dashboard .body{
-  display: grid;
-  grid-gap: 20px;
-}
 .dark #dashboard .body .card-dashboard{
-  width: 100%;
-  height: 220px;
   background-color: var(--dark-desaturated-blue);
-  border-radius: 5px;
-  position: relative;
-}
-.dark #dashboard .body .card-dashboard::after{
-  content: "";
-  width: 100%;
-  height: 4px;
-  position: absolute;
-  top:0;
-  left: 0;
-  border-radius: 5px 5px 0 0;
-}
-.dark #dashboard .body .b-fc::after{
-  background-color: var(--primary-facebook);
-}
-.dark #dashboard .body .b-tw::after{
-  background-color: var(--primary-twitter);
-}
-.dark #dashboard .body .b-ig::after{ 
-  background: var(--primary-instagram);
-}
-.dark #dashboard .body .b-yt::after{
-  background-color: var(--primary-youTube);
-}
-.dark #dashboard .body .card-dashboard .card-header {
-  margin-top: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.dark #dashboard .body .card-dashboard .card-header img{
-  margin-right: 8px;
 }
 .dark #dashboard .body .card-dashboard .card-header span{
-  font-size: 12px;
-  font-weight: 700;
-  color: var(--desaturated-blue)
+  color: var(--desaturated-blue);
 }
 .dark #dashboard .body .card-dashboard .card-body{
-  margin-top: 20px;
-  text-align: center;
-  font-size: 13px;
   color: var(--desaturated-blue);
-  text-transform: uppercase;
-  letter-spacing: 4.5px;
 }
 .dark #dashboard .body .card-dashboard .card-body h3{
   color: var(--white-text);
-  font-size: 50px;
-  margin: 0;
-  letter-spacing: 0;
 }
 .dark #dashboard .body .card-dashboard .card-footer{
-  text-align: center;
-  font-size: 11px;
-  font-weight: 700;
-  margin-top: 30px;
   color: var(--white-text);
 }
-
 /***** Overview *****/
-.dark #overview {
-  display: grid;
-  grid-gap: 10px;
-}
-.dark #overview .overview-body{
-  display: grid;
-  grid-gap: 20px;
-}
 .dark #overview .overview-body .card-overview{
   background-color: var(--dark-desaturated-blue);
-  border-radius: 5px;
-  padding: 22px 28px;
-  display: grid;
-  grid-gap: 25px;
-}
-.dark #overview .overview-body .card-overview .card-header,
-.dark #overview .overview-body .card-overview .card-body{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 .dark #overview .overview-body .card-overview .card-header h4{
   color: var(--desaturated-blue);
-  font-size: 15px;
-  margin: 0;
 }
 .dark #overview .overview-body .card-overview .card-body > span:not(.percentage) {
   color: var(--white-text);
-  font-size: 35px;
-  font-weight: 700;
-}
-
-footer{
-  padding: 25px 0;
-  font-size: 11px;
-  text-align: center;
-}
-
+} 
 /*** RESPONSIVE ***/
 @media only screen and (min-height: 1000px){
   html,body{
@@ -272,12 +322,43 @@ footer{
   }
 }
 @media only screen and (min-width: 970px){
+  .bg .bg-top{
+    height: 35%;
+  }
+  .bg .bg-bottom{
+    height: 65%;
+  }
   #dashboard .body,
   #overview .overview-body{
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 @media only screen and (min-width: 1200px){
+  #dashboard{
+    grid-template-rows: 100px 1fr;
+    grid-gap: 45px;
+  }
+  #dashboard .header{
+    grid-template-rows: initial;
+    grid-template-columns: 1fr 1fr;
+  }
+  #dashboard .header .dark-mode{
+    padding-top: 0px;
+    grid-template-columns: initial;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  #dashboard .header .dark-mode .switch-container{
+    position: static;
+    margin-left: 10px;
+  }
+  .hr{
+    display: none;
+  }
+  #main{
+    width: 82%;
+  }
   #dashboard .body,
   #overview .overview-body{
     grid-template-columns: 1fr 1fr 1fr 1fr;
