--- a/static/styles.css
+++ b/static/styles.css
@@ -140,11 +140,10 @@ footer a{
   display: grid;
   grid-gap: 20px;
 }
+
 #dashboard .body .card-dashboard{
   width: 100%;
   height: 220px;
-  background-color: var(--light-grayish-blue);
-  border-radius: 5px;
   position: relative;
 }
 #dashboard .body .card-dashboard::after{
@@ -212,8 +211,6 @@ footer a{
   grid-gap: 20px;
 }
 #overview .overview-body .card-overview{
-  background-color: var(--light-grayish-blue);
-  border-radius: 5px;
   padding: 22px 28px;
   display: grid;
   grid-gap: 25px;
@@ -242,7 +239,14 @@ footer a{
   margin-top: 30px;
   margin-bottom: 10px;
 }
-
+.container {
+  box-shadow: 0 0 5px rgba(0, 0, 0,.1);
+  background-color: var(--light-grayish-blue);
+  border-radius: 5px;
+}
+.dark .container{
+  background-color: var(--dark-desaturated-blue);
+}
 span.up-subs{
   color: var(--primary-lime-green);
   position: relative;
@@ -299,9 +303,6 @@ span.up-subs::before{
   left: 4px;
 }
 /*Body*/
-.dark #dashboard .body .card-dashboard{
-  background-color: var(--dark-desaturated-blue);
-}
 .dark #dashboard .body .card-dashboard .card-header span{
   color: var(--desaturated-blue);
 }
@@ -315,9 +316,6 @@ span.up-subs::before{
   color: var(--white-text);
 }
 /***** Overview *****/
-.dark #overview .overview-body .card-overview{
-  background-color: var(--dark-desaturated-blue);
-}
 .dark #overview .overview-body .card-overview .card-header h4{
   color: var(--desaturated-blue);
 }
