create the base of card, create the card-dashboard component, and create the main layout

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,1 +1,11 @@
+@import 'lib/reset';
 @import 'lib/varibales';
+
+/*layouts*/
+@import 'layout/grid';
+
+@import 'base/card';
+
+/*components*/
+@import 'components/switch-theme';
+@import 'components/card-dashboard';
