--- a/src/css/components/_card-dashboard.scss
+++ b/src/css/components/_card-dashboard.scss
@@ -12,6 +12,46 @@
     left: 0;
     border-radius: 5px 5px 0 0;
   }
+
+  &__header {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    img{
+      margin-right: 8px;
+    }
+
+    span{
+      font-size: 12px;
+      font-weight: 700;
+      color: var(--dark-grayish-blue);
+    } 
+  }
+
+  &__body {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 13px;
+    color: var(--dark-grayish-blue);
+    text-transform: uppercase;
+    letter-spacing: 4.5px;
+
+    h3{
+      color: var(--very-dark-blue);
+      font-size: 50px;
+      margin: 0;
+      letter-spacing: 0;
+    }
+  }
+
+  &__footer{
+    text-align: center;
+    font-size: 11px;
+    font-weight: 700;
+    margin-top: 30px;
+  }
 }
 
 .b-fc::after{
