--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,6 +97,40 @@
   left: 0;
   border-radius: 5px 5px 0 0;
 }
+.card--dashboard__header {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card--dashboard__header img {
+  margin-right: 8px;
+}
+.card--dashboard__header span {
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--dark-grayish-blue);
+}
+.card--dashboard__body {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 13px;
+  color: var(--dark-grayish-blue);
+  text-transform: uppercase;
+  letter-spacing: 4.5px;
+}
+.card--dashboard__body h3 {
+  color: var(--very-dark-blue);
+  font-size: 50px;
+  margin: 0;
+  letter-spacing: 0;
+}
+.card--dashboard__footer {
+  text-align: center;
+  font-size: 11px;
+  font-weight: 700;
+  margin-top: 30px;
+}
 
 .b-fc::after {
   background-color: #198ff5;
