--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,9 +7,7 @@
 @import 'views/home';
 
 /*layouts*/
-@import 'layout/grid';
-
-
+@import 'layout/dashboard';
 
 /*components*/
 @import 'components/switch-theme';
