--- a/src/css/components/_switch-theme.scss
+++ b/src/css/components/_switch-theme.scss
@@ -8,7 +8,7 @@
     align-items: center;
     position: relative;
 
-    ::after{
+    &::after{
       content: "";
       display: inline-block;
       width: 19px;
