--- a/src/css/layout/_dashboard.scss
+++ b/src/css/layout/_dashboard.scss
@@ -1,8 +1,3 @@
-#main {
-  width: 88%;
-  margin: 0 auto;
-}
-
 #dashboard {
   display: grid;
   grid-template-rows: 170px 1fr;
@@ -14,6 +9,22 @@
     
     &--title{
       position: relative;
+      @extend %title;
+    }
+    
+    &--content {
+      position: relative;
+      .hr{
+        border-bottom: 1px solid $dark-grayish-blue;
+        margin-top: 20px;
+        position: absolute;
+        bottom:0;
+        width: 100%;
+      }
+    }
+
+    &--text{
+      @extend %sub-title;
     }
 
     .darkmode{
@@ -22,6 +33,9 @@
       padding-top: 20px;
       position: relative;
 
+      span {
+        @extend %sub-title;
+      }
       .switch__container{
         position: absolute;
         right: 0;
@@ -30,16 +44,6 @@
     }
   }
   .dashboard__body{
-    display: grid;
-    grid-gap: 20px;
-  }
-}
-
-#overview {
-  display: grid;
-  grid-gap: 10px;
-
-  .overview__body{
     display: grid;
     grid-gap: 20px;
   }
