--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,9 @@
 
 /*layouts*/
 @import 'layout/dashboard';
+@import 'layout/overview';
 
 /*components*/
 @import 'components/switch-theme';
 @import 'components/card-dashboard';
+@import 'components/card-overview';
