--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,14 +10,14 @@
 /* Branding color */
 /*Dark theme*/
 /*light theme*/
-#dashboard .dashboard__header--title {
+#overview .header__title, #dashboard .dashboard__header .header__title {
   color: #1e202a;
   font-size: 1.7em;
   margin-top: 30px;
   margin-bottom: 10px;
 }
 
-#dashboard .dashboard__header .darkmode span, #dashboard .dashboard__header--text {
+#dashboard .dashboard__header .darkmode span, #dashboard .dashboard__header .header__text {
   color: #63687e;
   font-weight: 700;
 }
@@ -49,13 +49,13 @@ body {
   display: grid;
   grid-template-rows: 65% 35%;
 }
-#dashboard .dashboard__header--title {
+#dashboard .dashboard__header .header__title {
   position: relative;
 }
-#dashboard .dashboard__header--content {
+#dashboard .dashboard__header .header__content {
   position: relative;
 }
-#dashboard .dashboard__header--content .hr {
+#dashboard .dashboard__header .header__content .hr {
   border-bottom: 1px solid #63687e;
   margin-top: 20px;
   position: absolute;
@@ -74,6 +74,15 @@ body {
   top: 20px;
 }
 #dashboard .dashboard__body {
+  display: grid;
+  grid-gap: 20px;
+}
+
+#overview {
+  display: grid;
+  grid-gap: 10px;
+}
+#overview .overview__body {
   display: grid;
   grid-gap: 20px;
 }
@@ -128,18 +137,18 @@ body {
 .card--dashboard__header span {
   font-size: 12px;
   font-weight: 700;
-  color: var(--dark-grayish-blue);
+  color: #63687e;
 }
 .card--dashboard__body {
   margin-top: 20px;
   text-align: center;
   font-size: 13px;
-  color: var(--dark-grayish-blue);
+  color: #63687e;
   text-transform: uppercase;
   letter-spacing: 4.5px;
 }
 .card--dashboard__body h3 {
-  color: var(--very-dark-blue);
+  color: #1e202a;
   font-size: 50px;
   margin: 0;
   letter-spacing: 0;
@@ -165,6 +174,28 @@ body {
 
 .b-yt::after {
   background-color: #c4032a;
+}
+
+.card--overview__body, .card--overview__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card--overview {
+  padding: 22px 28px;
+  display: grid;
+  grid-gap: 25px;
+}
+.card--overview__header h4 {
+  color: #63687e;
+  font-size: 15px;
+  margin: 0;
+}
+.card--overview__body span:not(.percentage) {
+  color: #1e202a;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=main.css.map */
