--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,6 +28,33 @@
   background-color: #f0f2fa;
 }
 
+span.down-subs::before, span.up-subs::before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  position: absolute;
+  left: -15px;
+  top: 6px;
+}
+
+span.up-subs {
+  color: #1db489;
+  position: relative;
+}
+span.up-subs::before {
+  border-bottom: 5px solid #1db489;
+}
+
+span.down-subs {
+  color: #dc414c;
+  position: relative;
+}
+span.down-subs::before {
+  border-top: 5px solid #dc414c;
+}
+
 body {
   position: relative;
   font-family: "Inter", sans-serif;
@@ -85,6 +112,26 @@ body {
 #overview .overview__body {
   display: grid;
   grid-gap: 20px;
+}
+
+.bg {
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.bg .bg__top {
+  width: 100%;
+  height: 10%;
+  min-height: 180px;
+  background-color: #f5f7ff;
+}
+.bg .bg__bottom {
+  width: 100%;
+  height: 90%;
+  background-color: white;
 }
 
 /*components*/
