dark mode, new card classes (card__title and card__subtitle), footer component

--- a/src/css/base/_card.scss
+++ b/src/css/base/_card.scss
@@ -2,4 +2,21 @@
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0,.1);
   background-color: $light-grayish-blue;
+
+  .card__title {
+    color: $very-dark-blue;
+  } 
+  .card__subtitle {
+    color: $dark-grayish-blue;
+  }
+}
+.dark .card {
+  background-color: $dark-desaturated-blue;
+
+  .card__title {
+    color: $white-text;
+  } 
+  .card__subtitle {
+    color: $desaturated-blue;
+  }
 }
