--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,6 +11,7 @@
 @import 'layout/dashboard';
 @import 'layout/overview';
 @import 'layout/bg';
+@import 'layout/footer';
 
 /*components*/
 @import 'components/switch-theme';
