--- a/src/css/components/_card-overview.scss
+++ b/src/css/components/_card-overview.scss
@@ -12,8 +12,7 @@
   &__header {
     @extend %layot__card__overview;
 
-    h4 {
-      color: $dark-grayish-blue;
+    .card__subtitle {
       font-size: 15px;
       margin: 0;
     }
@@ -23,10 +22,8 @@
     @extend %layot__card__overview;
 
     span:not(.percentage) {
-      color: $very-dark-blue;
       font-size: 35px;
       font-weight: 700;
     }
   }
-  
 }
