--- a/src/css/layout/_dashboard.scss
+++ b/src/css/layout/_dashboard.scss
@@ -6,13 +6,11 @@
   .dashboard__header {
     display: grid;
     grid-template-rows: 65% 35%;
-    
-    .header{
+    .header {
       &__title{
         position: relative;
         @extend %title;
       }
-      
       &__content {
         position: relative;
         .hr{
@@ -23,19 +21,15 @@
           width: 100%;
         }
       }
-  
       &__text{
         @extend %sub-title;
       }
     }
-    
-
     .darkmode{
       display: grid;
       grid-template-columns: 1fr 1fr;
       padding-top: 20px;
       position: relative;
-
       span {
         @extend %sub-title;
       }
@@ -49,5 +43,17 @@
   .dashboard__body{
     display: grid;
     grid-gap: 20px;
+  }
+}
+
+.dark #dashboard {
+  .dashboard__header{
+    .header{
+      &__content {
+        .hr {
+          border-bottom: 1px solid $desaturated-blue;
+        }
+      }
+    }
   }
 }
